--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
       <artifactId>ask-sdk</artifactId>
       <version>2.5.5</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.3.2</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
