--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ deploy:
   runtime: "java8"
   handler_name: "main.java.testyourbrain.TestYourBrainIntentHandler"
   access_key_id: ASIA3UCMHMKCHQQGKB46
-  secret_access_key: Ckr3s/x6r+LdyhIQwA19mhK24M59wnjEl/w1OZUg
+  secret_access_key: 
