--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,22 @@ install:
   - mvn -N io.takari:maven:wrapper
   - ./mvnw install
 
+addons:
+   sonarcloud:
+       organization: "sweihmws2018-19"
 
 script:
-  mvn org.apache.maven.plugins:maven-assembly-plugin:2.6:assembly -DdescriptorId=jar-with-dependencies package
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install 
+sonar:sonar
+  - mvn org.apache.maven.plugins:maven-assembly-plugin:2.6:assembly 
+-DdescriptorId=jar-with-dependencies package
+
+deploy:
+  provider: lambda
+  function_name: "test_your_brain"
+  region: "us-east-1"
+  role: "arn:aws:lambda:us-east-1:799023784580:role/lambda_basic_execution"
+  runtime: "java8"
+  handler_name: "main.java.testyourbrain.TestYourBrainIntentHandler"
+  access_key_id: ASIA3UCMHMKCHQQGKB46
+secret_access_key: Ckr3s/x6r+LdyhIQwA19mhK24M59wnjEl/w1OZUg
