--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,8 @@ addons:
        organization: "sweihmws2018-19"
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install 
-sonar:sonar
-  - mvn org.apache.maven.plugins:maven-assembly-plugin:2.6:assembly 
--DdescriptorId=jar-with-dependencies package
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - mvn org.apache.maven.plugins:maven-assembly-plugin:2.6:assembly -DdescriptorId=jar-with-dependencies package
 
 deploy:
   provider: lambda
