--- a/pom.xml
+++ b/pom.xml
@@ -33,17 +33,12 @@
       <artifactId>ask-sdk</artifactId>
       <version>2.5.5</version>
     </dependency>
+     
       <dependency>
-          <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter-api</artifactId>
-          <version>RELEASE</version>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
           <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter-api</artifactId>
-          <version>5.3.2</version>
-          <scope>compile</scope>
       </dependency>
   </dependencies>
 
@@ -73,8 +68,22 @@
     </execution>
   </executions>
 </plugin>
+    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>3.0.0-M1</version>
+		        <configuration>
+          <includes>
+            <include>InsertCategoryTest.java</include>
+          </includes>
+        </configuration>
+</plugin>
       </plugins>
     </pluginManagement>
+
+    
+    
+    
   </build>
   
 </project>
