--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,13 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.12</version>
-          <scope>test</scope>
+         <type>jar</type>
       </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -73,9 +78,7 @@
 		<artifactId>maven-surefire-plugin</artifactId>
 		<version>3.0.0-M1</version>
 		        <configuration>
-          <includes>
-            <include>InsertCategoryTest.java</include>
-          </includes>
+
         </configuration>
 </plugin>
       </plugins>
