--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>hamcrest-core</artifactId>
       <version>1.3</version>
     </dependency>
+      <dependency>
+          <groupId>com.vaadin.external.google</groupId>
+          <artifactId>android-json</artifactId>
+          <version>0.0.20131108.vaadin1</version>
+      </dependency>
   </dependencies>
 
   <build>
