--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
           <artifactId>android-json</artifactId>
           <version>0.0.20131108.vaadin1</version>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.23.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
