--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0</version>
   <name>test your brain</name>
   <url>http://developer.amazon.com/ask</url>
+  <properties>
+    <powermock.version>1.5.2</powermock.version>
+  </properties>
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
@@ -28,6 +31,20 @@
   </scm>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>com.amazon.alexa</groupId>
       <artifactId>ask-sdk</artifactId>
@@ -37,7 +54,7 @@
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>4.12</version>
+          <version>4.8.2</version>
          <type>jar</type>
       </dependency>
     <dependency>
